--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <body>
 
         <div id="loading">
-            loading ...
+            loading ......
         </div>
         <div id="result">
             <p> There are currently <span id="number"></span> people in space </p>
 
             <div id="people">
-                
+
             </div>
         </div>
 
